# python-dev-basic-thesis

./: README.md  manage.py
eoscan_app/: __init__.py  celery.py  config.py  settings.py  urls.py  wsgi.py
eoscan_env/: pyproject.toml
eoscan_env/tests/: test_eoscan_env.py
recognition/: admin.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
recognition/management/commands/: fill_db.py
recognition/migrations/: 0001_initial.py  0002_auto_20201205_1708.py  0003_auto_20201206_0601.py  0004_auto_20201206_0806.py  0005_auto_20201206_0827.py  0006_auto_20201211_0528.py  0007_order_imputed_geodata.py  0008_auto_20201211_1613.py  0009_auto_20201212_1315.py  0010_auto_20201220_0648.py
recognition/templates/: base.html
recognition/templates/recognition/: about.html  contact.html  index.html  login.html  order_create.html  order_delete.html  order_detail.html  order_download.html  order_list.html  personal.html  register.html  reports.html  task_status.html  tool_info.html  tool_list.html  tooltype_list.html
