[tool.poetry]
name = "eoscan_env"
version = "0.1.0"
description = ""
authors = ["Lev Pikulev <pikulev.l.v@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
psycopg2 = "^2.8.6"
Pillow = "^8.0.1"
factory-boy = "^3.1.0"
django-debug-toolbar = "^3.2"
celery = "^5.0.3"
Django = "2.2.2"
django-celery-results = "^2.0.0"
rabbitmq = "^0.2.0"
easy-thumbnails = "^2.7.1"
django-simple-captcha = "^0.5.13"
django-cleanup = "^5.1.0"
DateTime = "^4.3"
opencv-python = "^4.4.0"
matplotlib = "^3.3.3"
numpy = "1.18"
scipy = "^1.5.4"
pyproj = "^3.0.0"
rasterio = "^1.1.8"
Keras = "^2.4.3"
tensorflow = "^2.3.1"
GDAL = "3.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
